testsuite/tests/pmcheck/complete_sigs/completesig04.stderr

completesig04.hs:6:1: error:
    • Cannot form a group of complete patterns from patterns ‘A’ and ‘B’ as they match different type constructors (‘A’ resp. ‘B’)
    • In {-# COMPLETE A, B #-}
