testsuite/tests/pmcheck/complete_sigs/completesig04.hs
module TyMismatch where

data A = A
data B = B

{-# COMPLETE A, B #-}
